[project]
name = "gswapi"
version = "0.1.0"
description = "A FastAPI wrapper for Guwendao."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx[socks]>=0.28.1",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.47.0",
]
